
now run the visual profiler to see where the bottlenecks are.
	1. occupancy of x2 is only at 0.167, probably due to register use.
	2. x2 : branching is high - reorganize
	3. x2 : cache miss.  use texture memory or use shared mem. 
	4. x2 : low memory bandwidth.  L1 hit ratio is only 48%
	5. x2 : mem access not coalesced. - disable cache, use texture mem, change data organization
	

should switch to comparison using the truncated segment function - to capture timing.
	
5. bank conflict - not much difference right now.
6. use of T* (local memory?) - switch to shared... - slowed down a lot: imrecon-gray test went from 1.9 sec for 8conn to 2.6, and 4.9 sec for 4conn to 6.8s
7. reduce register usage (maybe by removing the use of DevMem2D?)
	7.1 remove use of DevMem2D - only shaved off 4 to 5 registers. still at about 24...
		number of iterations went down.  from 53 to 45.  execution time went up from 1.9s to 2.1s.
		probably from the additional index computation.
	7.2 try volatile.
		not much change.
8. x2's data loading is reading data looping over ix, for each ty.  this means at a given point in time, the block is reading from multiple y's and the access is not coalesced between threads.
	the shared 2D array is organized right - ty is inner loop.
	reading from global memory is not organized right for easy coalescing.
	
	fixed by taking advantage of the square shared mem blocks.
		now using 43 or 44 registers.
***		but now int imrecon gray takes 	875ms.  still 45 iterations.
	
	look at visual profiler - somehow it's not able to do more than one run...
		but the info suggest that the occupancy is low for x2
		increase thread for x2 to 32 - small incremental effect.
	as comparison: original x scan with 16x32 threads:  1.4 s.
	
9. turn stream back on.	- no difference.
10.	reduce number of __syncthreads() - mostly in y.
9. remove as much conditionals as possible.
10. use page-locked memory for host to device?